# kernel-api

./: .gitignore  Cargo.toml
migrations/: 20260415173550_init.sql
src/: error.rs  main.rs
src/auth/: jwt.rs  password.rs
src/db/: pool.rs
src/handlers/: auth.rs
src/models/: user.rs
